Adding initial structur of the microservice with empty controllers
