# src/controllers/getAverageTimeSpent/handler.js
@@ -1,0 +1,18 @@
+'use strict';
+
+const logger = require('../../logger');
+const error = require('../../errors');
+const datastore = require('../../database');
+
+module.exports = async (req, res) => {
+  const {
+    params: { 'user-uuid': userUuid },
+    query: { screen },
+    metadata: { reqId },
+    headers: { authorization }
+  } = req;
+
+  // TODO: read from DB
+
+  res.status(200).end();
+};
